AM_CPPFLAGS = -Ich-pal
lib_LTLIBRARIES = libch-pal.la
libch_pal_la_SOURCES = pal_file.c  pal_general.c  pal_logger.c  pal_mutex.c  pal_semaphore.c  pal_sock.c  pal_sock_private.c  pal_threads.c pal_file_private.h  pal_mutex_private.h  pal_semaphore_private.h  pal_sock_private.h  pal_threads_private.h
libch_pal_adir = $(includedir)/ch-pal
nobase_include_HEADERS = ch-pal/exp_pal_file.h ch-pal/exp_pal.h ch-pal/exp_pal_logger.h ch-pal/exp_pal_semaphore.h ch-pal/exp_pal_string.h ch-pal/exp_pal_general.h ch-pal/exp_pal_includes.h ch-pal/exp_pal_local_limits.h ch-pal/exp_pal_mutex.h ch-pal/exp_pal_sock.h ch-pal/exp_pal_threads.h
